--- a/sample/style.css
+++ b/sample/style.css
@@ -31,5 +31,19 @@ font-size: 70px
 	padding: 20px;
 }
 
+@media (max-width: 700px) {
+  .video {
+    width: 300px;
+     height: auto;
+  } 
+    } 
+
+@media (max-width: 500px) {
+  .video {
+    width: 200px;
+    height: auto;
+  }
+    }
+
 
 
