--- a/sample/style.css
+++ b/sample/style.css
@@ -32,14 +32,14 @@ font-size: 70px
 }
 
 @media (max-width: 700px) {
-  .video {
+  iframe {
     width: 300px;
      height: auto;
   } 
     } 
 
 @media (max-width: 500px) {
-  .video {
+  iframe {
     width: 200px;
     height: auto;
   }
